minor fix for updating a dataset via the old ds update process